modified ingredientSources and getSourceEPCData for both directions
